Transpose B;Check base baseA baseB baseSVE OK;Code for COO;TODO check COO

--- a/by_operator/cpukernel/CMakeLists.txt
+++ b/by_operator/cpukernel/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.5)
 project(kernel)
 set(TOOLCHAIN_DIR $ENV{TOOLCHAIN_DIR})
 set(CMAKE_BUILD_TYPE "Release")
-set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -Wall -s")
-set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -O0 -g -Wall")
+set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -Wall -s -march=armv8-a+sve")
+set(CMAKE_CXX_FLAGS_DEBUG "-fPIC -O0 -g -Wall -march=armv8-a+sve")
 set(CAMKE_SKIP_RPATH TRUE)
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-z,relro,-z,now,-z,noexecstack -pie")
 add_compile_options(
